<resources>
    <string name="app_name">무료급식소를 찾아줘</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameTransition">nameTransition</string>
    <string name="imageTransition">imageTransition</string>
    <string name="locationTransition">locationTransition</string>
    <string name="timeTransition">timeTransition</string>
    <string name="phoneTransition">phoneTransition</string>
    <string name="cardTransition">cardTransition</string>
    <string name="iconTransition">iconTransition</string>

</resources>
