<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.cafeteria.free.findcafeteria.view.DetailActivity" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="#00000000"
                android:src="@drawable/ic_arrow_back" />


            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="#00000000"
                android:src="@drawable/ic_favorite_red" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/drop_shadow"></View>

        </RelativeLayout>

        <ScrollView
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/viewPagerIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="#fff"
                        android:gravity="center"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5">

                        <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
                            android:id="@+id/homeslider"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fitsSystemWindows="true"
                            android:transitionName="@string/imageTransition"
                            tools:listitem="@layout/viewpager_image" />

                        <LinearLayout
                            android:id="@+id/viewPagerCountDots"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                        </LinearLayout>

                    </RelativeLayout>


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_titlebar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Title"
                            android:padding="5dp"
                            android:transitionName="@string/nameTransition"
                            android:textSize="25sp"
                            android:layout_marginBottom="20dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                        <LinearLayout
                            style="@style/InformationLayoutStyle"
                            android:transitionName="@string/locationTransition">

                            <ImageView
                                style="@style/InformationIconStyle"
                                android:src="@drawable/ic_place_black_36dp" />

                            <TextView
                                android:id="@+id/address"
                                style="@style/InformationTextStyle" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/InformationLayoutStyle"
                            android:transitionName="@string/phoneTransition">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_local_phone_black_36dp" />

                            <TextView
                                android:id="@+id/phone"
                                style="@style/InformationTextStyle" />

                        </LinearLayout>

                        <LinearLayout
                            style="@style/InformationLayoutStyle"

                            android:transitionName="@string/timeTransition">

                            <ImageView
                                style="@style/InformationIconStyle"
                                android:src="@drawable/ic_alarm_black_48dp" />

                            <TextView
                                android:id="@+id/time"
                                style="@style/InformationTextStyle" />

                        </LinearLayout>

                        <LinearLayout style="@style/InformationLayoutStyle">

                            <ImageView
                                style="@style/InformationIconStyle"
                                android:src="@drawable/ic_event_black_48dp" />

                            <TextView
                                android:id="@+id/date"
                                style="@style/InformationTextStyle" />
                        </LinearLayout>

                        <LinearLayout style="@style/InformationLayoutStyle">

                            <ImageView
                                style="@style/InformationIconStyle"

                                android:src="@drawable/ic_supervisor_account_black_48dp" />

                            <TextView
                                android:id="@+id/target"
                                style="@style/InformationTextStyle" />
                        </LinearLayout>


                    </LinearLayout>


                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/detail_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="15dp" />
                </LinearLayout>

        </ScrollView>
    </LinearLayout>


</layout>